recursion.logo.tree.Tree.scala.error
Compilation error:
Tree:9: error: not found: value lenght
    tree(steps-1,lenght*shrink,angle,shrink)
                 ^